fixed various spacing issues and began development of home screen desktop

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -9,6 +9,10 @@
     z-index: 98 !important;
 }
 
+#aboutme{
+    position: absolute;
+}
+
 #sidenav-button{
     position: fixed;
     left: 0;
@@ -28,7 +32,6 @@ body{
     height:100%;
     margin: 0;
     width:100%;
-    overflow-y: scroll;
 }
 
 #bootScreen{
@@ -41,11 +44,14 @@ a{
 }
 
 #main{
-    width: 100%;
-    height: 100vh;
-    transform: translate(200px);
+    width: calc(100% - 225px);
+    height: calc(101vh - 26px);
+    transform: translate(216px);
     padding-left: 35px;
-    overflow-y: scroll;
+    background-color: #008080;
+    margin-top: 8px;
+    box-sizing: border-box;
+    overflow: auto;
 }
 
 #main h2{
